Fix navbar icon issue on Safari

--- a/components/nav/navbar/navbar.styl
+++ b/components/nav/navbar/navbar.styl
@@ -25,6 +25,7 @@ $navbar-height = $shell-top-nav-height is defined ? $shell-top-nav-height : 50px
 .navbar-items > li
 	display: inline-block
 	margin-bottom: 0
+	vertical-align: middle
 
 .navbar-items > li > a
 .navbar-item
